# fu-mensa

./: Cargo.toml
crates/mensa-meal-api/: Cargo.toml
crates/mensa-meal-api/src/: lib.rs  processed.rs  raw.rs
crates/mensa-web-api/: Cargo.toml
crates/mensa-web-api/src/: config.rs  main.rs  routes.rs
crates/mensa-web-api/src/routes/: data.rs  helpers.rs
crates/mensa-web-api/src/routes/data/: data.rs
